--- a/src/components/userCard/UserCard.css
+++ b/src/components/userCard/UserCard.css
@@ -82,6 +82,44 @@
     color: var(--platinum);
 }
 
+.usercard__container button {
+    position: relative;
+    font-size: 1.5rem;
+}
+
+.usercard__container button::after {
+    color: var(--platinum);
+    font-size: 1rem;
+    font-weight: 700;
+    position: absolute;
+    opacity: 0;
+    bottom: 50%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    transition: bottom 0.5s,
+                opacity 0.5s;
+}
+
+.usercard__container button:hover::after {
+    bottom: 150%;
+    transition: bottom 0.5s, 
+                opacity 0.5s;
+    opacity: 1;
+}
+
+.usercard__btn.delete::after {
+    content: 'Delete';
+    padding: 5px;
+    background: var(--delete);
+    border-radius: 10px;
+}
+
+.usercard__btn.update::after {
+    content: 'Edit';
+    padding: 5px 10px;
+    background-color: var(--edit);
+    border-radius: 10px;
+}
 
 
 @media (width < 321px) {
